-Добавил управление ботом с активити -Прикрутил бота как сервис

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         </activity>
         <!-- Receivers -->
         <!-- Services -->
+        <service
+            android:name=".bot.BotService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
